@@ -27,6 +27,11 @@
   <body>
     <release version="2.0-alpha1" date="in SVN"
       description="First alpha release after a major redesign.">
+      <action dev="oheger" type="update" issue="CONFIGURATION-591">
+        Removed methods from ConfigurationConverter related to ExtendedProperties.
+        This class is no longer supported by recent versions of Commons
+        Collections.
+      </action>
       <action dev="oheger" type="update" issue="CONFIGURATION-590">
         Removed Serializable interface from all configuration implementations.
         Some configuration classes declared this interface without being
